# patrol_robot

./: README.md  Robot model
Mapping/: myfile
controller/: CMakeLists.txt  Readme.md  package.xml
controller/include/controller/: controller.hpp
controller/launch/: rosbridge_websocket.launch  teleop.launch  web_video_server.launch  webrtc_ros.launch
controller/src/: controller.cpp  main.cpp
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/srv/: Control.srv
mr_robot_gazebo/launch/: cafehouse_world.launch  sp_bot_sim.launch  turtlebot3_house.launch
my_camera_stream/: index.html  package.xml  setup.py  websocket.js
my_camera_stream/scripts/: camera_stream_node.py
my_image_stream/: CMakeLists.txt  package.xml
my_image_stream/scripts/: image_stream.py
my_image_stream/web_interface/: index.html
patrol_control_panel/: Readme.md  index.js  package-lock.json  package.json
patrol_control_panel/public/: index.html
patrol_robot/: CMakeLists.txt  package.xml
spbotv2_description/: package.xml
spbotv2_description/launch/: controller.launch  controller.yaml  display.launch  robot.rviz  urdf.rviz
spbotv2_description/meshes/: base_link.stl  right_wheel_1.stl
spbotv2_description/urdf/: materials.xacro  spbotv2.gazebo  spbotv2.xacro  spbotv2_plugins.gazebo
web_ui/: index.html  websocket-client.js
webrtc_ros/: CMakeLists.txt
webrtc_ros/launch/: webrtc_ros.launch
webrtc_ros/scripts/: ice_server_service.py
webrtc_ros/web/: webrtc_ros.js
websocket_ros_bridge/: CMakeLists.txt  package.xml  setup.py
(+25 files in other folders)
